# UsbAmpControl

./: partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  index.html  index.js  main.c  mqtt_handler.c  mqtt_handler.h  ota_handler.c  ota_handler.h  secrets.h.example  usb_driver.c  web_server.c  web_server.h
